resolved missing toolbar on mobile devices error

--- a/frontend/src/components/tiptap-templates/simple/simple-editor.scss
+++ b/frontend/src/components/tiptap-templates/simple/simple-editor.scss
@@ -56,7 +56,9 @@ body,
 
 .simple-editor-wrapper {
   width: 100%;
-  height: 100%;
+  // height: 100%;
+  min-height: 500px;
+  max-height: 75dvh;
   overflow: auto;
 }
 
@@ -65,6 +67,7 @@ body,
   width: 100%;
   margin: 0 auto;
   height: 100%;
+
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -72,11 +75,12 @@ body,
 
 .simple-editor-content .tiptap.ProseMirror.simple-editor {
   flex: 1;
-  padding: 3rem 3rem 30vh;
+  padding: 3rem 3rem;
+  height: 100%;
 }
 
 @media screen and (max-width: 480px) {
   .simple-editor-content .tiptap.ProseMirror.simple-editor {
-    padding: 1rem 1.5rem 30vh;
+    padding: 4rem 1.5rem;
   }
 }
